responsive on mobile fixed and content

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -45,6 +45,12 @@ h6
 p
 	font-size 14px
 	color #333
+	
+@media (max-width: 480px){
+#contact-footer .row>div {
+	width: 100%
+}
+}
 
 @media (max-width: 540px){
 #partners li {
